--- a/index.html
+++ b/index.html
@@ -110,12 +110,13 @@ $(document).ready(function() {
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
-                        <div class="tm-bg-circle-white tm-flex-center-v shadow-lg p-3 mb-5">
+                        <div class="tm-bg-circle-white tm-flex-center-v shadow-lg p-3 mb-5 text-center">
                             <header class="text-center">
                                 <h1 class="tm-site-title">A MICRO WEBSITE</h1>
                                 <p class="tm-site-subtitle">Single page for all your links</p>
                             </header>
-                            <p>Take your <b>KPIN.IN</b> to whereever your audience is, to help them discover all your content</p>
+                            <p >Take your <b>KPIN.IN</b> to whereever your audience is, to help them discover all your content</p>
+
                             <p class="text-center mt-4 mb-0">
                                 <a data-scroll href="#tm-section-2" class="btn tm-btn-secondary btn-primary">Get Started for Free</a>
                             </p>
@@ -128,15 +129,21 @@ $(document).ready(function() {
         <section id="tm-section-2" class="tm-section pt-2 pb-2 sec2" >
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-8 col-lg-8 tm-flex-center-v tm-text-container tm-section-left">
-                        <h2 class="tm-color-secondary mb-4 changecolor">Easy to Create</h2>
-                        <p class="mb-5">Add multiple links, email collection forms, GIFs, your other social profiles and much more.</p>
-                        <p class="mb-4">Copy your unique URL and share it with your audience on your favourite platforms.</p>
 
-                        <p class="text-right mb-0">
+                    <div class="col-xl-8 col-lg-8 tm-flex-center-v tm-text-container tm-section-left">
+                        <h2 class="tm-color-secondary mb-4 changecolor">Smart Links For Influencers!</h2>
+                        <p class="mb-5">You get one link at a time on your social profile, Make it count With KPIN.IN and turn unlimited links into one.</p>
+                    <!--    <p class="mb-4"></p>  -->
+
+
+
+                        <h2 class="tm-color-secondary mb-4 changecolor">Easy to Create</h2>
+                        <p class="mb-5">Add multiple links, email collection forms, GIFs, your other social profiles and much more.Copy your unique URL and share it with your audience on your favourite platforms.</p>
+                        <p class="text-left mb-0">
                             <a href="#" class="btn tm-btn-secondary btn-primary">Get Started</a>
                         </p>
                     </div>
+
                     <div class="col-xl-4 col-lg-4 tm-circle-img-container">
                         <img src="img/sec1_bg.jpg" style="border-radius: 35px" alt="Image" class="rotateimg220">
                     </div>
@@ -154,10 +161,116 @@ $(document).ready(function() {
                             <p> <b>KPIN.IN</b>  is a beautiful way to share your YouTube, Instagram, Twitter, and more content with just one bio link. Your bio is free. Get started today!
                             </p>
 
+
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="sec4">
+          <div class="container-fluid" >
+
+
+            <div class="row">
+
+              <div class=" col-lg-4 col-md-12 col-sm-12 col-xsm-12 service-main wow bounceInUp" data-wow-duration="1.4s">
+
+                  <div class="card card2 shadow-lg p-3 mb-5 bg-white rounded">
+                      <header>
+                          <h2 class="tm-color-primary">Create a Project</h2>
+                      </header>
+                      <p>Give an interesting name to it.Select whether you want a Bio page or just want to shorten a link to add into your instagram profile.</p>
+
+                  </div>
+
+
+              </div>
+              <div class="col-lg-4 col-md-12 col-sm-12 col-xsm-12 service-main wow bounceInUp" data-wow-duration="1.4s">
+                <div class="card card2 shadow-lg p-3 mb-5 bg-white rounded">
+                    <header>
+                        <h2 class="tm-color-primary">Created A Short Link</h2>
+                    </header>
+                    <p>You are ready to share it on your favorite platforms.Now you can check your stats anytime and optimize your content.</p>
+
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-md-12  col-sm-12 col-xsm-12 service-main wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
+                <div class="card  card2 shadow-lg p-3 mb-5 bg-white rounded">
+                    <header>
+                        <h2 class="tm-color-primary">Created a Bio page, Need Help Setting it?</h2>
+                    </header>
+                    <p>Give a name to your Bio page, give a beautiful description and connect all your social media handles .Isn’t it so easy? You got your very first Bio page ready in minutes. Update it anytime you want and share it all over the internet world and grab more viewers.</p>
+
+                </div>
+
+              </div>
+
+
+            </div>
+
+          </div>
+        </section>
+        <section class="mid-sec1">
+          <div class="mid-div1">
+            <div class="row">
+              <div class="col-xlg-6 col-lg-6 col-md-12 col-sm-12 col-xsm-12 mid-content">
+                <h3>In depth Analytics of Clicks and Visitors</h3>
+                <p>Track your visitors with Google Analytics, retarget with Facebook pixel and have all your visitors data in hand.</p>
+
+              </div>
+              <div class="col-xlg-6 col-lg-6 col-md-12 col-sm-12 col-xsm-12 ">
+
+                                  <img style="border-radius: 20%;" src="img/googleanalytics.jpg" alt="">
+              </div>
+            </div>
+                    </div>
+                    <p><a href="#" class="btn tm-btn-secondary btn-danger">Get Started for free</a></p>
+
+        </section>
+        <section id="tm-section-2" class="tm-section pt-2 pb-2 sec2" >
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-xl-6 col-lg-6  col-md-12 col-sm-12 col-xsm-12 tm-flex-center-v tm-text-container tm-section-left">
+                        <h2 class="tm-color-secondary mb-4 changecolor">One Bio Link. Unlimited Possibilities.</h2>
+                        <p class="mb-5">Create your perfect bio profile in minutes. Anyone can do it with zero coding or technical skills because it's super easy and fun!</p>
+                    <!--    <p class="mb-4"></p>  -->
+                         <p><a href="#" class="btn tm-btn-secondary btn-primary">Get Started for free</a></p>
+                    </div>
+
+                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xsm-12  tm-circle-img-container">
+                        <img src="img/biopage.png" style=" height: 400px; width: 500px;" alt="Image" class="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="mid-sec1">
+          <div class="mid-div1">
+            <div class="row">
+
+              <div class="col-xlg-6 col-lg-6 col-md-12 col-sm-12 col-xsm-12 mid-content">
+
+                    <img style="border-radius: 20%;height: 350px ; width: 350px;" src="img/sme2.jpg" alt="">
+              </div>
+              <div class="col-xlg-6 col-lg-6 col-md-12 col-sm-12 col-xsm-12 ">
+                <h4>KPIN .IN enables you to Integrate your social media platform together with your Bio You can add </h4>
+                <ul class="links">
+                  <li>Instagram </li>
+                  <li>Youtube</li>
+                  <li>Facebook</li>
+                  <li>LinkedIn </li>
+                  <li>Spotify</li>
+                  <li>Tweeter</li>
+
+                </ul>
+                <p>And many more</p>
+                 <p><a href="#" class="btn tm-btn-secondary btn-warning">Get Started for free</a></p>
+                </div>
+            </div>
+
+          </div>
         </section>
         <section class="sec4">
           <div class="container-fluid" >
