--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@ $(document).ready(function() {
                 </div>
             </div>
         </section>
+        <div class="head">
+            <h3 style="font-weight: bold">HOW IT WORKS?</h3>
+        </div>
+
         <section class="sec4">
           <div class="container-fluid" >
 
