add nav-brand  link

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -77,7 +77,7 @@ $(document).ready(function() {
 <div class="navbar-wrap">
 	<nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-primary">
 	<div class="container">
-	  <a class="navbar-brand" href="#">KPIN</a>
+	  <a class="navbar-brand" href="index.html">KPIN</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
