--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -111,7 +111,7 @@ $(document).ready(function() {
   <section>
     <div class="terms">
       <div class="terms-img">
-        <img src="img/privacy.jpg" style="width: 100vw; height: 400px;" alt="TERMS AND CONDITIONS">
+        <img src="img/Privacy.jpg" style="width: 100vw; height: 400px;" alt="TERMS AND CONDITIONS">
       </div>
       <div class="terms-content">
          <h3>Disclosure of Data</h3>
