add privacy policy and terms of conditions

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ $(document).ready(function() {
 	</nav>
 </div>
 
-</head>
+</header>
 <!-- #header -->
 
 
@@ -369,8 +369,8 @@ $(document).ready(function() {
         <div class="col-lg-4 col-md-4 footer-links">
           <h4>Legal</h4>
           <ul class="links">
-            <li> <a href="#" target="_blank" >Privacy Policy</a></li>
-            <li> <a href="#" target="_blank" >Terms of Service</a></li>
+            <li> <a href="privacy-policy.html" target="_blank" >Privacy Policy</a></li>
+            <li> <a href="terms.html" target="_blank" >Terms of Service</a></li>
           <!--  <li><i class="ion-ios-arrow-right"></i> <a href="https://www.kohlihosting.com/">Kohli Hosting</a></li>
             <li><i class="ion-ios-arrow-right"></i> <a href="http://www.kohliconnect.com/">Kohli Connect</a></li>
             <li><i class="ion-ios-arrow-right"></i> <a href="http://www.kohlimail.com/default.php">Kohli Mail</a></li>
