add compare page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ $(document).ready(function() {
               $('#navbar_top').removeClass("fixed-top");
               $('.navbar-wrap').css('height', 'auto');
               $(".nav-link , .navbar-brand").css('color','white');
+            
             }
         });
     } // end if
@@ -386,7 +387,7 @@ $(document).ready(function() {
           <h4>Compare</h4>
          <ul class="links">
            <li><a href="#" target="_blank" >KPIN.IN vs bio.fm</a></li>
-           <li><a href="#" target="_blank" >KPIN.IN vs linktr.ee</a></li>
+           <li><a href="kpinVslinktree.html" target="_blank" >KPIN.IN vs linktr.ee</a></li>
          </ul>
 
         </div>
