--- a/kpinVslinktree.html
+++ b/kpinVslinktree.html
@@ -21,7 +21,10 @@
     <link rel="stylesheet" href="css/navigation.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/terms.css">
+
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<link rel="stylesheet" href="css/compare.css">
 <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js" integrity="sha384-3Nqiqht3ZZEO8FKj7GR1upiI385J92VwWNLj+FqHxtLYxd9l+WYpeqSOrLh0T12c" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -108,103 +111,100 @@ $(document).ready(function() {
   main starts
 ============================-->
 <main>
-  <section>
-    <div class="terms">
-      <div class="terms-img">
-        <img src="img/Privacy.jpg" style="width: 100vw; height: 400px;" alt="TERMS AND CONDITIONS">
-      </div>
-      <div class="terms-content">
-         <h3>Disclosure of Data</h3>
-         <br>
-         <div class="termslist">
-           <ol class="list4">
-             <li>
-              <div class="">
-                <h5>Legal Requirements</h5>
-                <p>KPIN.In may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
-                <ul class="list2">
-                  <li>
-                    <p>To comply with a legal obligation or legal Liability.</p>
-                  </li>
-                  <li>
-                    <p>To protect and defend the rights or property of it’s parent company Kohli Media LLP.</p>
-                  </li>
-                  <li>
-                    <p>To prevent or investigate possible wrongdoing in connection with the Service</p>
-                  </li>
-                  <li>
+  <section class="compare-main">
+    <div class="compare">
+      <div class="compare-content">
+        <p>Welcome to the page where you can compare link editors with each other, seeing how they can stalk up in terms of specifications. Our detailed comparison will let you make the worthwhile choice, to go a way ahead.</p>
+        <p>Anyone can build your stunning bio page with us in seconds!</p>
+        <div class="compare-img">
+          <h3 style='color: #cc0064'>The content deserves more than links.</h3>
+          <img src="img/kpvslt.png" alt="" style="margin: auto">
+        </div>
+          <div class="container">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th> <img src="img/linktreelogo.png"  width="25px" height="25px" alt=""> Linktree</th>
+              <th> <img src="img/kohlilogo.png" width="25px" height="25px" alt=""> KPin</th>
+            </tr>
 
-                      <p>To protect the personal safety of users or the public</p>
-
-                  </li>
-
-                </ul>
-
-              </div>
-            </li>
-             <li>
-                <div class="">
-                  <h5>Security of Data </h5>
-                  <p>The security of your data is very important to us and  you should acknowledge that no method of transmission over the Internet is 100% secure. While we strive to use commercially capable means to protect your Personal Data, we cannot guarantee its absolute safety.</p>
-                </div>
-            </li>
-             <li>
-                   <div class="">
-                     <h5>Payments</h5>
-                      <p>We may provide paid services within the Service. In that case, we use third-party services for payment processing. We will not store or collect any of  your payment details. That information is provided directly to our third-party payment processors whose use of your personal information is governed by their Privacy Policy.</p>
-                   </div>
-              </li>
-             <li>
-                 <div class="">
-                   <h5>KPIN profiles</h5>
-                   <p>KPIN profiles are totally formed by the user’s who built the profile. Any links, images, websites, or text are not operated by KPIN.IN and KPIN.IN is not liable for anything you may click on.</p>
-                    <h6>Types of Data Collected</h6>
-                    <ol class="list5">
-                      <li>
-                        <div class="">
-                          <h6>Personal Data</h6>
-                          <p>While using our Service, we may ask you to provide us with certain personal information that can be used to contact and identify you. Personal information may include:</p>
-                          <ul class="list2">
-                             <li>Email address</li>
-                             <li>First name and last name</li>
-                             <li>Social media URLs or Usernames</li>
-                             <li>Credit Card expiration/type/name</li>
-                          </ul>
-                          <p>We may use above mentioned or other  personal details of yours  to contact you with newsletters, marketing or promotional materials.</p>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="">
-                          <h6>User Data</h6>
-                          <p>We may also collect information how the Service is accessed and used by you. This User Data may include information such as your computer's IP address, browser type, browser version, the pages of our Service that you visit, the time and date of your visit, the time spent on those pages, unique device identifiers and other data.</p>
-                          <p>Your IP address is never stored in our database, we use your IP to obtain general information about your profile such as approximate geo-location e.g country or city.</p>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="">
-                          <h6>Location Data</h6>
-                          <p>We may use and store information about your location if you give us permission to do so. We use this data  to improve and customize our Service. We may use and store information about visitors to KPIN.IN Profiles. This is anonymised, removing any personal information about the user as we are interested in the ‘how’ more than the ‘who’.</p>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="">
-                          <h6>Tracking Cookies Data</h6>
-                          <p>We use cookies and similar tracking technologies to track the activity on our Service and hold certain information. Cookies are sent to your browser from a website and stored on your device. Tracking technologies also used are, tags, and scripts to collect and track information and to improve and analyze our Service. You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Service.</p>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="">
-                          <h6>Changes to This Privacy Policy</h6>
-                          <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes</p>
-                        </div>
-                      </li>
-                    </ol>
-
-                 </div>
-              </li>
-
-           </ol>
-         </div>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Premium membership available at $6</td>
+              <td>Premium membership available at </td>
+            </tr>
+            <tr>
+              <td>Easy to use and navigate</td>
+              <td>Easy to use and navigate</td>
+            </tr>
+            <tr>
+              <td>Unlimited shorten the link</td>
+              <td>Unlimited shorten the link</td>
+            </tr>
+            <tr>
+              <td>Integrate all links into one</td>
+              <td>Integrate all links into one</td>
+            </tr>
+            <tr>
+              <td>Link Scheduling (available in premium version only)</td>
+              <td>Link Scheduling (available in free version)</td>
+            </tr>
+            <tr>
+              <td>X</td>
+              <td>Customized links</td>
+            </tr>
+            <tr>
+              <td>X</td>
+              <td>Ads free (available in free version)</td>
+            </tr>
+            <tr>
+              <td>Customized bio page colors/background (in premium version)</td>
+              <td>Customized bio page colors</td>
+            </tr>
+            <tr>
+              <td>Bio Page theme (in free version)</td>
+              <td>Bio Page theme (in free version)</td>
+            </tr>
+            <tr>
+              <td>Link styling (available in premium version) </td>
+              <td>Link styling and fonts (available in free version)</td>
+            </tr>
+            <tr>
+              <td>Access to Social Platforms(available in Premium version)</td>
+              <td>Access to Social Platforms(available in free version)</td>
+            </tr>
+            <tr>
+              <td>Video link embedding with thumbnails (available in Premium version)</td>
+              <td>Video link embedding with thumbnails (available in free version )</td>
+            </tr>
+            <tr>
+              <td>Quantum of views and clicks (in free version).Detailed google analysis (in premium version)</td>
+              <td>Google analysis and in depth statistics (available in premium version)</td>
+            </tr>
+            <tr>
+              <td>X</td>
+              <td>SEO ( available in free version)</td>
+            </tr>
+            <tr>
+              <td>Facebook Pixel (available in premium version)</td>
+              <td>Facebook pixel (in premium version)</td>
+            </tr>
+            <tr>
+              <td>Mass mailing (available in premium version)</td>
+              <td>X</td>
+            </tr>
+            <tr>
+              <td>UTM parameters (available in premium version)</td>
+              <td>UTM parameters (available in premium version)</td>
+            </tr>
+            <tr>
+              <td>Remove Linktree brand (available in premium version)</td>
+              <td>Remove Kpin brand (available in premium version)</td>
+            </tr>
+          </tbody>
+        </table>
+          </div>
       </div>
     </div>
   </section>
