--- a/terms.html
+++ b/terms.html
@@ -234,7 +234,7 @@ $(document).ready(function() {
           <h4>Compare</h4>
          <ul class="links">
            <li><a href="#" target="_blank" >KPIN.IN vs bio.fm</a></li>
-           <li><a href="#" target="_blank" >KPIN.IN vs linktr.ee</a></li>
+           <li><a href="kpinVslinktree.html" target="_blank" >KPIN.IN vs linktr.ee</a></li>
          </ul>
 
         </div>
