--- a/kpinVslinktree.html
+++ b/kpinVslinktree.html
@@ -121,57 +121,214 @@ $(document).ready(function() {
           <img src="img/kpvslt.png" alt="" style="margin: auto">
         </div>
           <div class="container">
-        <table class="table table-bordered">
+
+                 <div class="row row2">
+                   <div class="col-6 thead thead1">
+                     <img src="img/linktreelogo.png"  width="25px" height="25px" alt=""> Linktree
+                   </div>
+                   <div class="col-6 thead thead2">
+                     <img src="img/kohlilogo.png" width="25px" height="25px" alt=""> KPin
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Premium membership available at $6
+                   </div>
+                   <div class="col-6">
+                     Premium membership available at
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Easy to use and navigate
+                   </div>
+                   <div class="col-6">
+                     Easy to use and navigate
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Unlimited shorten the link
+                   </div>
+                   <div class="col-6">
+                     Unlimited shorten the link
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Integrate all links into one
+                   </div>
+                   <div class="col-6">
+                     Integrate all links into one
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Link Scheduling (available in premium version only)
+                   </div>
+                   <div class="col-6">
+                     Link Scheduling (available in free version)
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     X
+                   </div>
+                   <div class="col-6">
+                     Customized links
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     X
+                   </div>
+                   <div class="col-6">
+                     Ads free (available in free version)
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Customized bio page colors/background (in premium version)
+                   </div>
+                   <div class="col-6">
+                     Customized bio page colors
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Bio Page theme (in free version)
+                   </div>
+                   <div class="col-6">
+                     Bio Page theme (in free version)
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Link styling (available in premium version)
+                   </div>
+                   <div class="col-6">
+                     Link styling and fonts (available in free version)
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Access to Social Platforms(available in Premium version)
+                   </div>
+                   <div class="col-6">
+                     Access to Social Platforms(available in free version)
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Video link embedding with thumbnails (available in Premium version)
+                   </div>
+                   <div class="col-6">
+                     Video link embedding with thumbnails (available in free version )
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Quantum of views and clicks (in free version)
+Detailed google analysis (in premium version)
+                   </div>
+                   <div class="col-6">
+                     Google analysis and in depth statistics (available in premium version)
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                        X
+                   </div>
+                   <div class="col-6">
+
+                  SEO ( available in free version)
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Facebook Pixel (available in premium version)
+                   </div>
+                   <div class="col-6">
+                     Facebook pixel (in premium version)
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Mass mailing (available in premium version)
+                   </div>
+                   <div class="col-6">
+                     X
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     UTM parameters (available in premium version)
+                   </div>
+                   <div class="col-6">
+                     UTM parameters (available in premium version)
+                   </div>
+                 </div>
+                 <div class="row ">
+                   <div class="col-6">
+                     Remove Linktree brand (available in premium version)
+                   </div>
+                   <div class="col-6">
+                     Remove Kpin brand (available in premium version)
+
+                   </div>
+                 </div>
+
+    <!--    <table class="table table-bordered ">
           <thead>
-            <tr>
-              <th> <img src="img/linktreelogo.png"  width="25px" height="25px" alt=""> Linktree</th>
-              <th> <img src="img/kohlilogo.png" width="25px" height="25px" alt=""> KPin</th>
+            <tr class="row">
+              <th class="col col-6"> </th>
+              <th  class="col col-6"> </th>
             </tr>
 
           </thead>
           <tbody>
             <tr>
-              <td>Premium membership available at $6</td>
+              <td></td>
               <td>Premium membership available at </td>
             </tr>
             <tr>
+              <td></td>
               <td>Easy to use and navigate</td>
-              <td>Easy to use and navigate</td>
             </tr>
             <tr>
+              <td></td>
               <td>Unlimited shorten the link</td>
-              <td>Unlimited shorten the link</td>
             </tr>
             <tr>
-              <td>Integrate all links into one</td>
+              <td></td>
               <td>Integrate all links into one</td>
             </tr>
             <tr>
-              <td>Link Scheduling (available in premium version only)</td>
-              <td>Link Scheduling (available in free version)</td>
+              <td></td>
+              <td></td>
             </tr>
             <tr>
               <td>X</td>
-              <td>Customized links</td>
+              <td></td>
             </tr>
             <tr>
               <td>X</td>
-              <td>Ads free (available in free version)</td>
+              <td></td>
             </tr>
             <tr>
-              <td>Customized bio page colors/background (in premium version)</td>
-              <td>Customized bio page colors</td>
+              <td></td>
+              <td></td>
             </tr>
             <tr>
+              <td></td>
               <td>Bio Page theme (in free version)</td>
-              <td>Bio Page theme (in free version)</td>
             </tr>
             <tr>
-              <td>Link styling (available in premium version) </td>
-              <td>Link styling and fonts (available in free version)</td>
+              <td> </td>
+              <td></td>
             </tr>
             <tr>
-              <td>Access to Social Platforms(available in Premium version)</td>
+              <td></td>
               <td>Access to Social Platforms(available in free version)</td>
             </tr>
             <tr>
@@ -203,7 +360,7 @@ $(document).ready(function() {
               <td>Remove Kpin brand (available in premium version)</td>
             </tr>
           </tbody>
-        </table>
+        </table>    -->
           </div>
       </div>
     </div>
