--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ $(document).ready(function() {
               $('#navbar_top').removeClass("fixed-top");
               $('.navbar-wrap').css('height', 'auto');
               $(".nav-link , .navbar-brand").css('color','white');
-            
+
             }
         });
     } // end if
@@ -113,10 +113,9 @@ $(document).ready(function() {
                     <div class="col-sm-12">
                         <div class="tm-bg-circle-white tm-flex-center-v shadow-lg p-3 mb-5 text-center">
                             <header class="text-center">
-                                <h1 class="tm-site-title">A MICRO WEBSITE</h1>
-                                <p class="tm-site-subtitle">Single page for all your links</p>
+                                <h3 style="color: #cc0064;">Be a Smart Infleuncer with our smart Links !</h3>
                             </header>
-                            <p >Take your <b>KPIN.IN</b> to whereever your audience is, to help them discover all your content</p>
+                            <p >A link-in-bio solution which will help you connect audiences to all your content with just one link.</p>
 
                             <p class="text-center mt-4 mb-0">
                                 <a data-scroll href="#tm-section-2" class="btn tm-btn-secondary btn-primary">Get Started for Free</a>
@@ -354,7 +353,7 @@ $(document).ready(function() {
 <!--==========================
   Footer
 ============================-->
-<footer id="footer" class="bg-primary " style="color: white !important; margin: 20px; padding: 20px;">
+<footer id="footer" class="bg-primary " style="color: white !important; margin: 0px; margin-top: 20px; padding: 20px;">
   <div class="footer-top">
     <div class="container">
       <div class="row" style="text-align: center">
