--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@ $(document).ready(function() {
         <section class="tm-section tm-section-1">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12">
-                        <div class="tm-bg-circle-white tm-flex-center-v shadow-lg p-3 mb-5 text-center">
+                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+                        <div style="margin-top: 20px;" class="tm-bg-circle-white tm-flex-center-v shadow-lg p-3 mb-5 text-center">
                             <header class="text-center">
-                                <h3 style="color: #cc0064;">Be a Smart Infleuncer with our smart Links !</h3>
+                                <h3 style="color: #cc0064;">Be a Smart Influencer with our smart Links !</h3>
                             </header>
                             <p >A link-in-bio solution which will help you connect audiences to all your content with just one link.</p>
 
@@ -122,6 +122,10 @@ $(document).ready(function() {
                             </p>
 
                         </div>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+
+                      <img src="img/gif1.gif" alt="">
                     </div>
                 </div>
             </div>
